--- a/source/index.jade
+++ b/source/index.jade
@@ -7,4 +7,43 @@ html(lang='ja', prefix="og: http://ogp.me/ns#")
     link(rel='stylesheet', href='assets/stylesheets/dncngrl_02.css')
     script(src='assets/javascripts/dncngrl_02.js')
   body
-    p dncngrl_02
+    //- bg
+    .bg
+      .bg_top#bg_top
+      .bg_introduction#bg_introduction
+      .bg_gallery#bg_gallery
+      .bg_credit#bg_credit
+    
+    
+    //- header
+    header.header
+      a.header_backTop(href='/') Back to dncngrl.com
+      
+      .header_share
+        .title Share
+        ul.list
+          li.item.item-tw
+            a(href='#') Tw
+          li.item.item-fb
+            a(href='#') Fb
+          li.item.item-gp
+            a(href='#') Gp
+          
+    
+    //- top
+    section.section_top
+      .content.content-top
+        p.subTitle Dancing Girl. Vol.02
+        h1.title The World Trip
+        small.description 2016 Summer -Aikatsu! Illustrations-
+        
+        
+    //- footer
+    footer.footer
+      .footer_scroll
+        .icon
+        .text Scroll
+      
+      .footer_copyright
+        .copyright (C) 2016 Dancing Girl.
+        .credit Design and Illustration by Ryo Nakae
