--- a/source/index.jade
+++ b/source/index.jade
@@ -4,8 +4,8 @@ html(lang='ja', prefix="og: http://ogp.me/ns#")
     meta(charset='UTF-8')
     title dncngrl_02
     
-    link(rel='stylesheet', href='assets/stylesheets/dncngrl_02.css')
-    script(src='assets/javascripts/dncngrl_02.js')
+    link(rel='stylesheet', href='assets/stylesheets/dg02.css')
+    script(src='assets/javascripts/dg02.js')
   body
     //- bg
     .bg
@@ -13,7 +13,6 @@ html(lang='ja', prefix="og: http://ogp.me/ns#")
       .bg_introduction#bg_introduction
       .bg_gallery#bg_gallery
       .bg_credit#bg_credit
-    
     
     //- header
     header.header
@@ -28,16 +27,16 @@ html(lang='ja', prefix="og: http://ogp.me/ns#")
             a(href='#') Fb
           li.item.item-gp
             a(href='#') Gp
-          
     
-    //- top
-    section.section_top
-      .content.content-top
-        p.subTitle Dancing Girl. Vol.02
-        h1.title The World Trip
-        small.description 2016 Summer -Aikatsu! Illustrations-
-        
-        
+    //- viewArea
+    .viewArea
+      //- top
+      section.section_top
+        .content.content-top
+          p.subTitle Dancing Girl. Vol.02
+          h1.title The World Trip
+          small.description 2016 Summer -Aikatsu! Illustrations-
+          
     //- footer
     footer.footer
       .footer_scroll
