--- a/source/index.jade
+++ b/source/index.jade
@@ -9,10 +9,11 @@ html(lang='ja', prefix="og: http://ogp.me/ns#")
   body
     //- bg
     .bg
-      .bg_top#bg_top
-      .bg_introduction#bg_introduction
-      .bg_gallery#bg_gallery
-      .bg_credit#bg_credit
+      .bg_item.bg_item-top#bgTop
+      .bg_item.bg_item-introduction#bgIntroduction
+      .bg_item.bg_item-gallery#bgGallery
+      .bg_item.bg_item-credit#bgCredit
+    
     
     //- header
     header.header
@@ -28,14 +29,25 @@ html(lang='ja', prefix="og: http://ogp.me/ns#")
           li.item.item-gp
             a(href='#') Gp
     
+    
     //- viewArea
     .viewArea
       //- top
-      section.section_top
-        .content.content-top
+      section.viewArea_section.viewArea_section-top
+        .content
           p.subTitle Dancing Girl. Vol.02
-          h1.title The World Trip
+          h1.title Another World
           small.description 2016 Summer -Aikatsu! Illustrations-
+      
+      //- introduction
+      section.viewArea_section.viewArea_section-intro
+        .content
+          h2.title Introduction
+          .description
+            p あの「Soleil」のメンバーにして、ファッションブランド「SPICY AGEHA」の専属モデル、「美しき刃」こと紫吹蘭。そして「Dancing Diva」の一員、「ステージに咲く氷の華」氷上スミレ。そんなクールにして可憐な2人が、もし女性ファッション誌の巻頭特集を飾ったら……。
+            p 「Dancing Girl. Vol.01 Orchid &amp; Violet」は、そんなコンセプトで制作した、「アイカツ！」の二次創作イラスト集です。
+            p まるで、ゲーム・アニメから現実世界へ飛び出してきたようなアイドル2人の活躍をぜひ、ご覧ください。
+          
           
     //- footer
     footer.footer
