雑にnavi押したらslideがprev/nextする

--- a/source/assets/stylesheets/dg02.styl
+++ b/source/assets/stylesheets/dg02.styl
@@ -2,3 +2,12 @@
 
 @import 'components/_viewArea'
 @import 'components/_bg'
+
+// temp
+.galleryNav
+  position fixed
+  top 50px
+  left 50px
+
+  &.is-disableClick
+    pointer-events none
