--- a/source/index.jade
+++ b/source/index.jade
@@ -47,6 +47,14 @@ html(lang='ja', prefix="og: http://ogp.me/ns#")
             p あの「Soleil」のメンバーにして、ファッションブランド「SPICY AGEHA」の専属モデル、「美しき刃」こと紫吹蘭。そして「Dancing Diva」の一員、「ステージに咲く氷の華」氷上スミレ。そんなクールにして可憐な2人が、もし女性ファッション誌の巻頭特集を飾ったら……。
             p 「Dancing Girl. Vol.01 Orchid &amp; Violet」は、そんなコンセプトで制作した、「アイカツ！」の二次創作イラスト集です。
             p まるで、ゲーム・アニメから現実世界へ飛び出してきたようなアイドル2人の活躍をぜひ、ご覧ください。
+            
+      //- gallery
+      section.viewArea_section.viewArea_section-gallery
+        .content
+          h2.title Gallery
+          .galleryNav#galleryNav
+            .galleryNav_arrow.galleryNav_nav-prev#galleryNavPrev Prev
+            .galleryNav_arrow.galleryNav_nav-next#galleryNavNext Next
           
           
     //- footer
