Slideクラスを別ファイルに

--- a/source/index.jade
+++ b/source/index.jade
@@ -55,7 +55,11 @@ html(lang='ja', prefix="og: http://ogp.me/ns#")
           .galleryNav#galleryNav
             .galleryNav_arrow.galleryNav_nav-prev#galleryNavPrev Prev
             .galleryNav_arrow.galleryNav_nav-next#galleryNavNext Next
-          
+            
+            .galleryNav_indicator
+              span.current 1
+              span.separator /
+              span.all 3
           
     //- footer
     footer.footer
