--- a/source/index.jade
+++ b/source/index.jade
@@ -10,7 +10,7 @@ html(lang='ja', prefix="og: http://ogp.me/ns#")
     //- bg
     .bg
       .bg_item.bg_item-top#bgTop
-      .bg_item.bg_item-introduction#bgIntroduction
+      .bg_item.bg_item-intro#bgIntroduction
       .bg_item.bg_item-gallery#bgGallery
       .bg_item.bg_item-credit#bgCredit
     
@@ -57,9 +57,9 @@ html(lang='ja', prefix="og: http://ogp.me/ns#")
             .galleryNav_arrow.galleryNav_nav-next#galleryNavNext Next
             
             .galleryNav_indicator
-              span.current 1
+              span.current#galleryIndicatorCurrent -
               span.separator /
-              span.all 3
+              span.all#galleryIndicatorAll -
           
     //- footer
     footer.footer
