--- a/source/assets/stylesheets/dg02.styl
+++ b/source/assets/stylesheets/dg02.styl
@@ -2,6 +2,8 @@
 
 @import 'components/_viewArea'
 @import 'components/_bg'
+@import 'components/_header'
+@import 'components/_footer'
 
 // temp
 .galleryNav
