--- a/source/index.jade
+++ b/source/index.jade
@@ -21,13 +21,17 @@ html(lang='ja', prefix="og: http://ogp.me/ns#")
       
       .header_share
         .title Share
+        .border
         ul.list
           li.item.item-tw
-            a(href='#') Tw
+            a(href='#')
+              span Tw
           li.item.item-fb
-            a(href='#') Fb
+            a(href='#')
+              span Fb
           li.item.item-gp
-            a(href='#') Gp
+            a(href='#')
+              span Gp
     
     
     //- viewArea
