--- a/source/assets/stylesheets/components/_bg.styl
+++ b/source/assets/stylesheets/components/_bg.styl
@@ -1,4 +1,20 @@
 .bg
+  position absolute
+  width 100%
+  height 100%
+  top 0
+  left 0
+
   &_item
+    position absolute
+    width 100%
+    height 100%
+    top 0
+    left 0
+    visibility hidden
+
     &-intro
       opacity 0.3
+
+    &.is-show
+      visibility visible
