--- a/source/assets/stylesheets/components/_viewArea.styl
+++ b/source/assets/stylesheets/components/_viewArea.styl
@@ -1,5 +1,18 @@
 .viewArea
-  width 100vw
-  height 100vh
-  position relative
-  overflow scroll
+  position absolute
+  width 100%
+  height 100%
+  top 0
+  left 0
+  overflow hidden
+
+  &_section
+    position absolute
+    width 100%
+    height 100%
+    top 0
+    left 0
+    visibility hidden
+
+    &.is-show
+      visibility visible
