--- a/source/index.jade
+++ b/source/index.jade
@@ -69,8 +69,12 @@ html(lang='ja', prefix="og: http://ogp.me/ns#")
     footer.footer
       .footer_scroll
         .icon
+          .icon_borderLeft
+          .icon_borderCenter
+          .icon_borderRight
         .text Scroll
       
       .footer_copyright
         .copyright (C) 2016 Dancing Girl.
+        .border
         .credit Design and Illustration by Ryo Nakae
