--- a/source/assets/stylesheets/_base.styl
+++ b/source/assets/stylesheets/_base.styl
@@ -27,3 +27,9 @@ body
   a
     color inherit
     text-decoration none
+    transition: all 300ms ease
+
+    body.is-pc &
+      &:hover
+        opacity 0.8
+        text-decoration none
