--- a/source/assets/stylesheets/components/_footer.styl
+++ b/source/assets/stylesheets/components/_footer.styl
@@ -3,4 +3,70 @@
   bottom 0
   left 0
   width 100%
+  padding 0 30px 30px
   z-index 10
+
+
+  &_scroll
+    position absolute
+    left 30px
+    bottom 30px
+    cursor pointer
+
+    .icon
+      width 21px
+      height 21px
+      position relative
+      left 50%
+      transform translateX(-50%)
+
+      &_borderCenter
+        position absolute
+        bottom 0
+        left 50%
+        width 1px
+        height 20px
+        background-color $textColor_default
+
+      &_borderLeft,
+      &_borderRight
+        position absolute
+        width 1px
+        height 6px
+        bottom 0
+        left 50%
+        background-color $textColor_default
+
+      &_borderLeft
+        transform rotate(-45deg)
+        transform-origin bottom left
+
+      &_borderRight
+        transform rotate(45deg)
+        transform-origin bottom right
+
+    .text
+      margin-top 5px
+      font-size $fontSize_small
+      text-align center
+
+
+  &_copyright
+    // float right
+    position absolute
+    right 30px
+    bottom 30px
+
+    > *
+      display inline-block
+      vertical-align middle
+      font-size $fontSize_small
+
+    .border
+      width 30px
+      height 1px
+      background-color $borderColor_default
+      margin-left 15px
+
+    .credit
+      margin-left 15px
