--- a/source/assets/stylesheets/_config.styl
+++ b/source/assets/stylesheets/_config.styl
@@ -18,7 +18,8 @@ $textColor_default = $color_white
 
 
 // font family
-$fontFamily_default = 'Helvetica Neue', Helvetica, Arial, 'ヒラギノ角ゴ ProN W3', 'Hiragino Kaku Gothic ProN', 'メイリオ', Meiryo, sans-serif
+// $fontFamily_default = 'Helvetica Neue', Helvetica, Arial, 'ヒラギノ角ゴ ProN W3', 'Hiragino Kaku Gothic ProN', 'メイリオ', Meiryo, sans-serif
+$fontFamily_default = ProximaNova, 'Avenir Next', Avenir, 'Helvetica Neue', Helvetica, Arial, NotoSansJapanese, 'ヒラギノ角ゴ ProN W3', 'Hiragino Kaku Gothic ProN', 'メイリオ', Meiryo, sans-serif
 
 
 // font size
