--- a/source/assets/stylesheets/components/_header.styl
+++ b/source/assets/stylesheets/components/_header.styl
@@ -17,6 +17,7 @@
 
     body.is-pc &
       &:hover
+        opacity 1
         border-color transparent
         background-color $textColor_default
         color $bgColor_default
@@ -25,7 +26,7 @@
   &_share
     float right
     position relative
-    margin-top 8px
+    margin-top 6px
 
     > *
       display inline-block
@@ -41,14 +42,14 @@
       margin-left 15px
 
     .list
-      margin 0 0 0 15px
+      margin 0 0 0 10px
       padding 0
       list-style-type none
 
       .item
         display inline-block
         vertical-align middle
-        margin-left 10px
+        margin-left 7px
         width 30px
         height 30px
         position relative
