--- a/source/index.jade
+++ b/source/index.jade
@@ -7,6 +7,11 @@ html(lang='ja', prefix="og: http://ogp.me/ns#")
     link(rel='stylesheet', href='assets/stylesheets/dg02.css')
     script(src='assets/javascripts/dg02.js')
   body
+    //- noise
+    .noise
+    //- light
+    .light
+    
     //- bg
     .bg
       .bg_item.bg_item-top#bgTop
