--- a/source/index.jade
+++ b/source/index.jade
@@ -8,14 +8,14 @@ html(lang='ja', prefix="og: http://ogp.me/ns#")
     script(src='assets/javascripts/dg02.js')
   body
     //- noise and light
-    //- .noise
-    //- .light
+    .noise
+    .light
     
     //- bg
     .bg
       .bg_item.bg_item-top#bgTop
       .bg_item.bg_item-intro#bgIntroduction
-      .bg_item.bg_item-gallery#bgGallery.is-show
+      .bg_item.bg_item-gallery#bgGallery
       .bg_item.bg_item-credit#bgCredit
     
     
@@ -57,7 +57,7 @@ html(lang='ja', prefix="og: http://ogp.me/ns#")
             p まるで、ゲーム・アニメから現実世界へ飛び出してきたようなアイドル2人の活躍をぜひ、ご覧ください。
             
       //- gallery
-      section.viewArea_section.viewArea_section-gallery.is-show
+      section.viewArea_section.viewArea_section-gallery
         .content
           h2.title Gallery
           .galleryNav#galleryNav
