--- a/source/assets/stylesheets/components/_bg.styl
+++ b/source/assets/stylesheets/components/_bg.styl
@@ -13,8 +13,8 @@
     left 0
     visibility hidden
 
-    &-intro
-      opacity 0.5
+    // &-intro
+      // opacity 0.5
 
     &.is-show
       visibility visible
