パーティクルがそこそこいい感じで消える

--- a/source/assets/stylesheets/_base.styl
+++ b/source/assets/stylesheets/_base.styl
@@ -52,8 +52,9 @@ a
 
 .noise
   background-image url('../images/bg_noise.gif')
+  background-size 300px
   mix-blend-mode overlay
-  opacity 0.5
+  opacity 0.6
 
 .light
   background-image radial-gradient(circle at center, white 0%, transparent 100%)
