--- a/source/index.jade
+++ b/source/index.jade
@@ -71,7 +71,7 @@ html(lang='ja', prefix="og: http://ogp.me/ns#")
           
     //- footer
     footer.footer
-      .footer_scroll
+      .footer_scroll#scroll
         .icon
           .icon_borderLeft
           .icon_borderCenter
