まぁまぁスタイリング

--- a/source/assets/stylesheets/components/_bg.styl
+++ b/source/assets/stylesheets/components/_bg.styl
@@ -14,7 +14,10 @@
     visibility hidden
 
     &-intro
-      opacity 0.6
+      background-color rgba(#000, 0.15);
+
+      canvas
+        opacity 0.4
 
     &.is-show
       visibility visible
