--- a/source/assets/stylesheets/dg02.styl
+++ b/source/assets/stylesheets/dg02.styl
@@ -4,6 +4,7 @@
 @import 'components/_bg'
 @import 'components/_header'
 @import 'components/_footer'
+@import 'components/_content'
 
 // temp
 .galleryNav
