--- a/source/index.jade
+++ b/source/index.jade
@@ -42,14 +42,14 @@ html(lang='ja', prefix="og: http://ogp.me/ns#")
     .viewArea
       //- top
       section.viewArea_section.viewArea_section-top
-        .content
+        .content.content-top
           p.subTitle Dancing Girl. Vol.02
           h1.title Another World
-          small.description 2016 Summer -Aikatsu! Illustrations-
+          small.caption 2016 Summer -Aikatsu! Illustrations-
       
       //- introduction
       section.viewArea_section.viewArea_section-intro
-        .content
+        .content.content-intro
           h2.title Introduction
           .description
             p あの「Soleil」のメンバーにして、ファッションブランド「SPICY AGEHA」の専属モデル、「美しき刃」こと紫吹蘭。そして「Dancing Diva」の一員、「ステージに咲く氷の華」氷上スミレ。そんなクールにして可憐な2人が、もし女性ファッション誌の巻頭特集を飾ったら……。
@@ -58,7 +58,7 @@ html(lang='ja', prefix="og: http://ogp.me/ns#")
             
       //- gallery
       section.viewArea_section.viewArea_section-gallery
-        .content
+        .content.content-gallery
           h2.title Gallery
           .galleryNav#galleryNav
             .galleryNav_arrow.galleryNav_nav-prev#galleryNavPrev Prev
