--- a/source/assets/stylesheets/dg02.styl
+++ b/source/assets/stylesheets/dg02.styl
@@ -5,13 +5,14 @@
 @import 'components/_header'
 @import 'components/_footer'
 @import 'components/_content'
+@import 'components/_galleryNav'
 
-// temp
-.galleryNav
-  position fixed
-  top 100px
-  left 100px
-
-  &.is-disableClick
-    pointer-events none
-    opacity 0.3
+// // temp
+// .galleryNav
+//   position fixed
+//   top 100px
+//   left 100px
+//
+//   &.is-disableClick
+//     pointer-events none
+//     opacity 0.3
