--- a/source/assets/stylesheets/_config.styl
+++ b/source/assets/stylesheets/_config.styl
@@ -3,10 +3,12 @@ $color_white = #fff
 $color_black = #1a1a1a
 $color_lightGray = #c2c7cc
 $color_darkGray = #999
+$color_blue = #00b1ed
 
 
 // bg color
 $bgColor_default = $color_lightGray
+$bgColor_selection = rgba($color_blue, 0.2)
 
 
 // border color
@@ -34,7 +36,7 @@ $lineHeight_title = 1.35
 
 
 // letter spacing
-$letterSpacing_default = 0.05em
+$letterSpacing_default = 0.06em
 
 
 // width
