--- a/source/assets/stylesheets/components/_content.styl
+++ b/source/assets/stylesheets/components/_content.styl
@@ -1,18 +1,41 @@
+$transitionDuration = 1000ms
+$transitionEasing = 'in-out-cubic'
+
 .content
-  position absolute
-  top 50%
-  transform translateY(-50%)
-  padding-left 170px
-  margin-right 170px
+  position relative
+  width 100%
+  height 100%
+
+  &_inner
+    position absolute
+    top 50%
+    transform translateY(-50%)
+    padding-left 170px
 
 
   .title
+    transition: all $transitionDuration easing($transitionEasing)
+    transition-delay 0
     font-size $fontSize_sectionTitle
+    letter-spacing 0.08em
     margin 0
     line-height 1
+    opacity 0
+    transform translateX(-30px)
+    filter blur(20px)
+
+    .viewArea_section.is-show &
+      opacity 1
+      transform translateX(0)
+      filter blur(0px)
 
   .description
+    transition: all $transitionDuration easing($transitionEasing)
+    transition-delay 250ms
     margin-top 40px
+    opacity 0
+    transform translateX(-30px)
+    filter blur(20px)
 
     > *:first-child
       margin-top 0
@@ -20,29 +43,59 @@
     > *:last-child
       margin-bottom 0
 
+    .viewArea_section.is-show &
+      opacity 1
+      transform translateX(0)
+      filter blur(0px)
+
 
   // top
   &-top
-    margin-left 30px
-    margin-right 30px
+    padding-left 30px
 
     .subTitle
+      transition: all $transitionDuration easing($transitionEasing)
+      transition-delay 0
       line-height 1
       margin 0
       font-size rem(28px)
+      opacity 0
+      transform translateX(-30px)
+      filter blur(20px)
+
+      .viewArea_section.is-show &
+        opacity 1
+        transform translateX(0)
+        filter blur(0px)
 
     .title
+      transition-delay 250ms
       font-size rem(90px)
+      letter-spacing 0.02em
       margin-top 12px
 
     .caption
+      transition: all $transitionDuration easing($transitionEasing)
+      transition-delay 500ms
       display block
       line-height 1
       margin 0
       font-size rem(16px)
       margin-top 10px
+      opacity 0
+      transform translateX(-30px)
+      filter blur(20px)
+
+      .viewArea_section.is-show &
+        opacity 1
+        transform translateX(0)
+        filter blur(0px)
 
 
   // intro
   &-intro
     max-width 50%
+
+
+  // gallery
+  // &-gallery
