--- a/source/index.jade
+++ b/source/index.jade
@@ -83,6 +83,13 @@ html(lang='ja', prefix="og: http://ogp.me/ns#")
           
     //- footer
     footer.footer
+      .footer_copyright
+        .copyright (C) 2016 Dancing Girl.
+        .border
+        .credit
+          | Design and Illustration by
+          a.is-animation(href='http://brdr.jp', target='_blank') Ryo Nakae
+        
       .footer_scroll#scroll
         .inner
           .icon
@@ -90,8 +97,3 @@ html(lang='ja', prefix="og: http://ogp.me/ns#")
             .icon_borderCenter
             .icon_borderRight
           .text Scroll
-      
-      .footer_copyright
-        .copyright (C) 2016 Dancing Girl.
-        .border
-        .credit Design and Illustration by Ryo Nakae
