--- a/source/assets/stylesheets/_base.styl
+++ b/source/assets/stylesheets/_base.styl
@@ -42,11 +42,25 @@ a
   color inherit
   text-decoration none
   transition: all 300ms ease
+  position relative
 
-  body.is-pc &
-    &:hover
-      opacity 0.7
-      text-decoration none
+  &.is-animation:after
+    transition: all 400ms easing('out-expo')
+    content ''
+    position absolute
+    width 0
+    height 1px
+    background-color $textColor_default
+    bottom -2px
+    left 0
+
+
+  body.is-pc &:hover
+    opacity 0.7
+    text-decoration none
+
+    &.is-animation:after
+      width 100%
 
 
 // noise and light
