--- a/source/assets/stylesheets/components/_header.styl
+++ b/source/assets/stylesheets/components/_header.styl
@@ -1,4 +1,5 @@
 .header
+  transition: all 1000ms easing('in-out-cubic')
   position fixed
   top 0
   left 0
@@ -6,6 +7,10 @@
   padding 30px 30px 0
   z-index 10
   clearfix()
+  opacity 0
+
+  body.is-ready &
+    opacity 1
 
 
   &_backTop
