--- a/source/index.jade
+++ b/source/index.jade
@@ -2,7 +2,20 @@ doctype html
 html(lang='ja', prefix="og: http://ogp.me/ns#")
   head
     meta(charset='UTF-8')
-    title dncngrl_02
+    title Dancing Girl. Vol.02 Another World | 芸能人はカードが命！10 ソ30
+
+    meta(name="description", content="「アイカツ！」の二次創作イラスト集「Dancing Girl. Vol.02 Another World」の特設サイト。")
+    meta(name="robots", content="index,follow")
+    meta(name="viewport", content="width=device-width,initial-scale=1.0")
+
+    meta(property="og:title", content="Dancing Girl. Vol.02 Another World | 芸能人はカードが命！10 ソ30")
+    meta(property="og:type", content="website")
+    meta(property="og:url", content="http://dncngrl.com/dg02")
+    meta(property="og:description", content="「アイカツ！」の二次創作イラスト集「Dancing Girl. Vol.02 Another World」の特設サイト。")
+    meta(property="og:site_name", content="Dancing Girl.")
+    meta(property="og:image", content="http://file.brdr.jp/dncngrl_02/images/ogp_img.jpg")
+    meta(property="og:locale", content="ja_JP")
+    meta(name="twitter:card", content="summary_large_image")
     
     link(rel='stylesheet', href='assets/stylesheets/dg02.css')
     script(src='assets/javascripts/dg02.js')
@@ -10,6 +23,11 @@ html(lang='ja', prefix="og: http://ogp.me/ns#")
     //- noise and light
     .noise
     .light
+      
+    //- loader
+    .loader
+      .text
+        .text_inner dg02 Loading
     
     //- bg
     .bg
