--- a/source/assets/stylesheets/components/_footer.styl
+++ b/source/assets/stylesheets/components/_footer.styl
@@ -1,6 +1,8 @@
 .footer
   transition: all 1000ms easing('in-out-cubic')
   position fixed
+  -webkit-backface-visibility:hidden;
+  backface-visibility:hidden;
   bottom 0
   left 0
   width 100%
