--- a/source/assets/stylesheets/components/_bg.styl
+++ b/source/assets/stylesheets/components/_bg.styl
@@ -1,5 +1,7 @@
 .bg
   position fixed
+  -webkit-backface-visibility:hidden;
+  backface-visibility:hidden;
   width 100%
   height 100%
   top 0
@@ -8,13 +10,21 @@
 
   &_item
     transition: all 1000ms ease
-    position absolute
+    position fixed
+    -webkit-backface-visibility:hidden;
+    backface-visibility:hidden;
     width 100%
     height 100%
     top 0
     left 0
     opacity 0
     background-color transparent;
+
+    // おまじない
+    canvas
+      -webkit-backface-visibility:hidden;
+      backface-visibility:hidden;
+      visibility hidden
 
     &-intro
       background-color rgba(#000, 0.1);
@@ -24,3 +34,6 @@
 
     &.is-show
       opacity 1
+
+      canvas
+        visibility visible
