--- a/source/assets/stylesheets/components/_header.styl
+++ b/source/assets/stylesheets/components/_header.styl
@@ -1,6 +1,8 @@
 .header
   transition: all 1000ms easing('in-out-cubic')
   position fixed
+  -webkit-backface-visibility:hidden;
+  backface-visibility:hidden;
   top 0
   left 0
   width 100%
