--- a/source/assets/stylesheets/dg02.styl
+++ b/source/assets/stylesheets/dg02.styl
@@ -6,6 +6,7 @@
 @import 'components/_footer'
 @import 'components/_content'
 @import 'components/_galleryNav'
+@import 'components/_sectionNav'
 
 // // temp
 // .galleryNav
