--- a/source/index.jade
+++ b/source/index.jade
@@ -56,6 +56,26 @@ html(lang='ja', prefix="og: http://ogp.me/ns#")
               span Gp
     
     
+    //- navi
+    ul.sectionNav#sectionNav
+      li.sectionNav_item(data-section='top')#sectionNavTop
+        .text Top
+        .icon
+          .inner
+      li.sectionNav_item(data-section='intro')#sectionNavIntro
+        .text Introduction
+        .icon
+          .inner
+      li.sectionNav_item(data-section='gallery')#sectionNavGallery
+        .text Gallery
+        .icon
+          .inner
+      li.sectionNav_item(data-section='info')#sectionNavInfo
+        .text Information
+        .icon
+          .inner
+    
+    
     //- viewArea
     .viewArea
       //- top
