--- a/source/assets/stylesheets/_base.styl
+++ b/source/assets/stylesheets/_base.styl
@@ -71,7 +71,9 @@ a
 // noise and light
 .noise,
 .light
-  position absolute
+  position fixed
+  // -webkit-backface-visibility:hidden;
+  // backface-visibility:hidden;
   width 100%
   height 100%
   top 0
