--- a/source/assets/stylesheets/components/_content.styl
+++ b/source/assets/stylesheets/components/_content.styl
@@ -21,12 +21,17 @@ $transitionEasing = 'in-out-cubic'
     margin 0
     line-height 1
     opacity 0
-    transform translateX(-30px)
     filter blur(20px)
+
+    body.is-transitionIn &
+      transform translateY(40px)
+
+    body.is-transitionOut &
+      transform translateY(-40px)
 
     .viewArea_section.is-show &
       opacity 1
-      transform translateX(0)
+      transform translateY(0)
       filter blur(0px)
 
   .description
@@ -34,7 +39,6 @@ $transitionEasing = 'in-out-cubic'
     transition-delay 250ms
     margin-top 40px
     opacity 0
-    transform translateX(-30px)
     filter blur(20px)
 
     > *:first-child
@@ -43,9 +47,15 @@ $transitionEasing = 'in-out-cubic'
     > *:last-child
       margin-bottom 0
 
+    body.is-transitionIn &
+      transform translateY(40px)
+
+    body.is-transitionOut &
+      transform translateY(-40px)
+
     .viewArea_section.is-show &
       opacity 1
-      transform translateX(0)
+      transform translateY(0)
       filter blur(0px)
 
 
@@ -61,12 +71,17 @@ $transitionEasing = 'in-out-cubic'
       margin 0
       font-size rem(28px)
       opacity 0
-      transform translateX(-30px)
       filter blur(20px)
+
+      body.is-transitionIn &
+        transform translateY(40px)
+
+      body.is-transitionOut &
+        transform translateY(-40px)
 
       .viewArea_section.is-show &
         opacity 1
-        transform translateX(0)
+        transform translateY(0)
         filter blur(0px)
 
     .title
@@ -84,12 +99,17 @@ $transitionEasing = 'in-out-cubic'
       font-size rem(16px)
       margin-top 10px
       opacity 0
-      transform translateX(-30px)
       filter blur(20px)
+
+      body.is-transitionIn &
+        transform translateY(40px)
+
+      body.is-transitionOut &
+        transform translateY(-40px)
 
       .viewArea_section.is-show &
         opacity 1
-        transform translateX(0)
+        transform translateY(0)
         filter blur(0px)
 
 
