--- a/source/assets/stylesheets/components/_viewArea.styl
+++ b/source/assets/stylesheets/components/_viewArea.styl
@@ -12,7 +12,11 @@
     height 100%
     top 0
     left 0
+    // opacity 0
     visibility hidden
+    pointer-events none
 
     &.is-show
+      // opacity 1
       visibility visible
+      pointer-events auto
