--- a/source/assets/stylesheets/_config.styl
+++ b/source/assets/stylesheets/_config.styl
@@ -49,3 +49,9 @@ $mq_pc = only screen, max-width 1199px
 $mq_tablet = only screen, max-width 899px
 $mq_spLarge = only screen, max-width 639px
 $mq_sp = only screen, max-width 399px
+
+
+// transition
+$transitionDuration = 1000ms
+$transitionDuration_quick = 400ms
+$transitionEasing = 'in-out-cubic'
