--- a/source/assets/stylesheets/components/_header.styl
+++ b/source/assets/stylesheets/components/_header.styl
@@ -1,5 +1,5 @@
 .header
-  transition: all 1000ms easing('in-out-cubic')
+  transition: all $transitionDuration easing($transitionEasing)
   position fixed
   -webkit-backface-visibility:hidden;
   backface-visibility:hidden;
