--- a/source/assets/stylesheets/_base.styl
+++ b/source/assets/stylesheets/_base.styl
@@ -46,11 +46,11 @@ body
 a
   color inherit
   text-decoration none
-  transition: all 300ms ease
+  transition: all $transitionDuration_quick ease
   position relative
 
   &.is-animation:after
-    transition: all 400ms easing('out-expo')
+    transition: all $transitionDuration_quick easing('out-expo')
     content ''
     position absolute
     width 0
@@ -64,8 +64,11 @@ a
     opacity 0.7
     text-decoration none
 
-    &.is-animation:after
-      width 100%
+    &.is-animation
+      opacity 1
+
+      &:after
+        width 100%
 
 
 // noise and light
@@ -105,7 +108,7 @@ a
     opacity 0.4
 
 .loader
-  transition: all 1000ms ease
+  transition: all $transitionDuration easing($transitionEasing)
   position fixed
   -webkit-backface-visibility:hidden;
   backface-visibility:hidden;
@@ -117,7 +120,7 @@ a
 
   .text
     display inline-block
-    transition: all 1000ms easing('in-out-cubic')
+    transition: all $transitionDuration easing($transitionEasing)
     font-weight bold
     font-size rem(36px)
     letter-spacing 0.06em
