--- a/source/assets/stylesheets/components/_bg.styl
+++ b/source/assets/stylesheets/components/_bg.styl
@@ -1,7 +1,7 @@
 .bg
   position fixed
-  -webkit-backface-visibility:hidden;
-  backface-visibility:hidden;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
   width 100%
   height 100%
   top 0
@@ -9,10 +9,10 @@
   pointer-events none
 
   &_item
-    transition: all 1000ms ease
+    transition: all $transitionDuration easing($transitionEasing)
     position fixed
-    -webkit-backface-visibility:hidden;
-    backface-visibility:hidden;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
     width 100%
     height 100%
     top 0
@@ -22,18 +22,23 @@
 
     // おまじない
     canvas
-      -webkit-backface-visibility:hidden;
-      backface-visibility:hidden;
+      -webkit-backface-visibility: hidden;
+      backface-visibility: hidden;
       visibility hidden
-
-    &-intro
-      background-color rgba(#000, 0.1);
-
-      canvas
-        opacity 0.5
 
     &.is-show
       opacity 1
 
       canvas
         visibility visible
+
+    // intro
+    &-intro
+      background-color rgba(#000, 0.1);
+
+      canvas
+        opacity 0.5
+
+    // info
+    &-info
+      background-color rgba(#000, 0.1);
