--- a/source/assets/stylesheets/components/_galleryNav.styl
+++ b/source/assets/stylesheets/components/_galleryNav.styl
@@ -6,7 +6,6 @@
   left 50%
   transform translateX(-50%)
   opacity 0
-  // filter blur(20px)
 
   // disable when transition
   &.is-disableClick
@@ -16,8 +15,6 @@
 
   .viewArea_section.is-show &
     opacity 1
-    // filter blur(0)
-    // transform translateX(-50%) translateY(0)
 
   &_indicator
     font-size $fontSize_small
@@ -46,14 +43,14 @@
       opacity 0.2
 
     .inner
-      transition: all 400ms easing('out-expo')
+      transition: all $transitionDuration_quick easing('out-expo')
       transition-property opacity, transform
       width 100%
       height 100%
       position relative
 
     .borderCenter
-      transition: all 400ms easing('out-expo')
+      transition: all $transitionDuration_quick easing('out-expo')
       position absolute
       width 30px
       height 1px
