--- a/source/assets/stylesheets/dg02.styl
+++ b/source/assets/stylesheets/dg02.styl
@@ -7,13 +7,4 @@
 @import 'components/_content'
 @import 'components/_galleryNav'
 @import 'components/_sectionNav'
-
-// // temp
-// .galleryNav
-//   position fixed
-//   top 100px
-//   left 100px
-//
-//   &.is-disableClick
-//     pointer-events none
-//     opacity 0.3
+@import 'components/_info'
