--- a/source/index.jade
+++ b/source/index.jade
@@ -34,7 +34,7 @@ html(lang='ja', prefix="og: http://ogp.me/ns#")
       .bg_item.bg_item-top#bgTop
       .bg_item.bg_item-intro#bgIntroduction
       .bg_item.bg_item-gallery#bgGallery
-      .bg_item.bg_item-credit#bgCredit
+      .bg_item.bg_item-info#bgInfo
     
     
     //- header
@@ -83,14 +83,16 @@ html(lang='ja', prefix="og: http://ogp.me/ns#")
         .content.content-top
           .content_inner
             p.subTitle Dancing Girl. Vol.02
-            h1.title Another World
+            h1.title
+              span Another World
             small.caption 2016 Summer -Aikatsu! Illustrations-
       
       //- introduction
       section.viewArea_section.viewArea_section-intro
         .content.content-intro
           .content_inner
-            h2.title Introduction
+            h2.title
+              span Introduction
             .description
               p あの「Soleil」のメンバーにして、ファッションブランド「SPICY AGEHA」の専属モデル、「美しき刃」こと紫吹蘭。そして「Dancing Diva」の一員、「ステージに咲く氷の華」氷上スミレ。そんなクールにして可憐な2人が、もし女性ファッション誌の巻頭特集を飾ったら……。
               p 「Dancing Girl. Vol.01 Orchid &amp; Violet」は、そんなコンセプトで制作した、「アイカツ！」の二次創作イラスト集です。
@@ -100,7 +102,8 @@ html(lang='ja', prefix="og: http://ogp.me/ns#")
       section.viewArea_section.viewArea_section-gallery
         .content.content-gallery
           .content_inner
-            h2.title Gallery
+            h2.title
+              span Gallery
             
           .galleryNav#galleryNav
             .galleryNav_arrow.galleryNav_arrow-prev#galleryNavPrev
@@ -118,6 +121,47 @@ html(lang='ja', prefix="og: http://ogp.me/ns#")
               span.current#galleryIndicatorCurrent -
               .separator
               span.all#galleryIndicatorAll -
+              
+      //- information
+      section.viewArea_section.viewArea_section-info
+        .content.content-info
+          .content_inner
+            h2.title
+              span Information
+            
+            .description
+              .info_box
+                .info_boxInner
+                  dl.info_list
+                    dt.info_listTitle 仕様
+                    dd.info_listText B5縦 フルカラーオフセット印刷 20P
+                    dt.info_listTitle 頒布価格
+                    dd.info_listText 700円
+                .info_boxInner
+                  dl.info_list
+                    dt.info_listTitle 頒布場所
+                    dd.info_listText
+                      | 2016.7.10 芸能人はカードが命！10
+                      br
+                      a.is-animation(href='#', target='_blank') - ソ30「Dancing Girl.」
+                    dd.info_listText
+                      | 2016.8.12 コミックマーケット90
+                      br
+                      a.is-animation(href='#', target='_blank') - 1日目 西g13a「Dancing Girl.」
+                      
+              .credit
+                h3.credit_title Credit
+                dl.credit_list
+                  dt.credit_listTitle Concept / Illustration / Graphic Design / Web Design &amp; Develop
+                  dd.credit_listText.credit_listText-large
+                    a.is-animation(href='http://brdr.jp', target='_blank') Ryo Nakae
+                  dt.credit_listTitle Guest Illustration
+                  dd.credit_listText
+                    a.is-animation(href='http://daisukenagai.com', target='_blank') Daisuke Nagai
+                  dd.credit_listText
+                    a.is-animation(href='https://jypg.net/futa', target='_blank') futa
+                  dd.credit_listText
+                    a.is-animation(href='https://about.me/sazu12', target='_blank') sazu
           
     //- footer
     footer.footer
