infoスタイリング

--- a/source/assets/stylesheets/components/_bg.styl
+++ b/source/assets/stylesheets/components/_bg.styl
@@ -45,4 +45,4 @@
 
       canvas
         opacity 0.35
-        mask-image linear-gradient(to bottom, rgba(#000, 0), rgba(#000, 1))
+        // mask-image linear-gradient(to bottom, rgba(#000, 0), rgba(#000, 1))
