--- a/source/index.jade
+++ b/source/index.jade
@@ -130,37 +130,33 @@ html(lang='ja', prefix="og: http://ogp.me/ns#")
               span Information
             
             .description
-              .info_box
-                .info_boxInner
-                  dl.info_list
-                    dt.info_listTitle 仕様
-                    dd.info_listText B5縦 フルカラーオフセット印刷 20P
-                    dt.info_listTitle 頒布価格
-                    dd.info_listText 700円
-                .info_boxInner
-                  dl.info_list
-                    dt.info_listTitle 頒布場所
-                    dd.info_listText
-                      | 2016.7.10 芸能人はカードが命！10
-                      br
-                      a.is-animation(href='#', target='_blank') - ソ30「Dancing Girl.」
-                    dd.info_listText
-                      | 2016.8.12 コミックマーケット90
-                      br
-                      a.is-animation(href='#', target='_blank') - 1日目 西g13a「Dancing Girl.」
+              dl.info_list
+                dt.info_listTitle 仕様
+                dd.info_listText B5縦 フルカラーオフセット印刷 20P
+                dt.info_listTitle 頒布価格
+                dd.info_listText 700円
+                dt.info_listTitle 頒布場所
+                dd.info_listText
+                  | 2016.7.10 芸能人はカードが命！10
+                  br
+                  a.is-animation(href='#', target='_blank') - ソ30「Dancing Girl.」
+                dd.info_listText
+                  | 2016.8.12 コミックマーケット90
+                  br
+                  a.is-animation(href='#', target='_blank') - 1日目 西g13a「Dancing Girl.」
                       
-              .credit
-                h3.credit_title Credit
-                dl.credit_list
-                  dt.credit_listTitle Concept / Illustration / Graphic Design / Web Design &amp; Develop
-                  dd.credit_listText.credit_listText-large
+              .info_credit
+                h3.info_creditTitle Credit
+                dl.info_creditList
+                  dt.info_creditListTitle Concept / Illustration / Graphic Design / Web Design &amp; Develop
+                  dd.info_creditListText.info_creditListText-large
                     a.is-animation(href='http://brdr.jp', target='_blank') Ryo Nakae
-                  dt.credit_listTitle Guest Illustration
-                  dd.credit_listText
+                  dt.info_creditListTitle Guest Illustration
+                  dd.info_creditListText.info_creditListText-guest
                     a.is-animation(href='http://daisukenagai.com', target='_blank') Daisuke Nagai
-                  dd.credit_listText
+                  dd.info_creditListText.info_creditListText-guest
                     a.is-animation(href='https://jypg.net/futa', target='_blank') futa
-                  dd.credit_listText
+                  dd.info_creditListText.info_creditListText-guest
                     a.is-animation(href='https://about.me/sazu12', target='_blank') sazu
           
     //- footer
