--- a/source/assets/stylesheets/components/_content.styl
+++ b/source/assets/stylesheets/components/_content.styl
@@ -53,10 +53,10 @@
     opacity 0
     filter blur(20px)
 
-    > *:first-child
+    > p:first-child
       margin-top 0
 
-    > *:last-child
+    > p:last-child
       margin-bottom 0
 
     body.is-transitionIn &
@@ -137,3 +137,29 @@
 
   // info
   // &-info
+
+
++media-query($mq_tablet)
+  .content
+    &_inner
+      padding-left 100px
+      padding-right 100px
+
+      .title,
+      .description
+        max-width 600px
+        margin-left auto
+        margin-right auto
+
+      .title
+        position static
+
+      .description
+        margin-top 10px
+
+    &-gallery
+      .content_inner
+        padding-left 30px
+
+      .title
+        position absolute
