--- a/source/assets/stylesheets/components/_content.styl
+++ b/source/assets/stylesheets/components/_content.styl
@@ -82,6 +82,7 @@
       line-height 1
       margin 0
       font-size rem(28px)
+      font-weight bold
       opacity 0
       filter blur(20px)
 
@@ -145,17 +146,34 @@
       padding-left 100px
       padding-right 100px
 
-      .title,
-      .description
-        max-width 600px
-        margin-left auto
-        margin-right auto
+    .title,
+    .description
+      max-width 600px
+      margin-left auto
+      margin-right auto
+
+    .title
+      position static
+      font-size rem(24px)
+      top 0
+      transform translateY(0)
+
+    .description
+      margin-top 15px
+
+    &-top
+      .subTitle
+        font-size rem(24px)
 
       .title
-        position static
+        font-size rem(80px)
+        margin-top 6px
+        margin-left 0
+        margin-right 0
 
-      .description
-        margin-top 10px
+      .caption
+        margin-top 6px
+        font-size rem(14px)
 
     &-gallery
       .content_inner
@@ -163,3 +181,67 @@
 
       .title
         position absolute
+
+
++media-query($mq_spLarge)
+  .content
+    &_inner
+      padding-left 20px
+      padding-right 20px
+
+    &-top
+      .content_inner
+        padding-left 20px
+        padding-right 20px
+
+      .subTitle
+        font-size rem(20px)
+
+      .title
+        font-size rem(50px)
+        margin-top 3px
+        margin-left 0
+        margin-right 0
+
+      .caption
+        margin-top 3px
+        font-size rem(11px)
+
+    &-gallery
+      .content_inner
+        padding-left 20px
+
+      .title
+        top 50%
+        transform translateY(-50%)
+
+
++media-query($mq_sp)
+  .content
+    &_inner
+      padding-left 10px
+      padding-right 10px
+
+    .title
+      font-size rem(20px)
+
+    .description
+      margin-top 10px
+
+    &-top
+      .content_inner
+        padding-left 10px
+        padding-right 10px
+
+      .subTitle
+        font-size rem(18px)
+
+      .title
+        font-size rem(42px)
+        margin-top 3px
+        margin-left 0
+        margin-right 0
+
+    &-gallery
+      .content_inner
+        padding-left 10px
