--- a/source/assets/stylesheets/components/_footer.styl
+++ b/source/assets/stylesheets/components/_footer.styl
@@ -6,7 +6,6 @@
   bottom 0
   left 0
   width 100%
-  padding 0 30px 30px
   z-index 10
   opacity 0
 
@@ -105,3 +104,32 @@
     .credit
       a
         margin-left .5em
+
+
++media-query($mq_spLarge)
+  .footer
+    &_scroll
+      right 20px
+      bottom 18px
+
+    &_copyright
+      left 20px
+      bottom 18px
+
+      .border
+        display none
+
+      .copyright,
+      .credit
+        display block
+
+
++media-query($mq_sp)
+  .footer
+    &_scroll
+      right 10px
+      bottom 8px
+
+    &_copyright
+      left 10px
+      bottom 8px
