--- a/source/assets/stylesheets/components/_galleryNav.styl
+++ b/source/assets/stylesheets/components/_galleryNav.styl
@@ -120,6 +120,13 @@
             width 26px
 
 
-// +media-query($mq_spLarge)
-//   .galleryNav
-//     bottom 120px
++media-query($mq_spLarge)
+  .galleryNav
+    bottom 75px
+
+    &_arrow
+      &-prev
+        margin-right 50px
+
+      &-next
+        margin-left 50px
