update link url

--- a/source/index.jade
+++ b/source/index.jade
@@ -46,13 +46,13 @@ html(lang='ja', prefix="og: http://ogp.me/ns#")
         .border
         ul.list
           li.item.item-tw
-            a(href='#')
+            a(href='https://twitter.com/share?url=http://dncngrl.com/dg02&text=Dancing%20Girl.%20Vol.02%20Another%20World%20%7C%20%E8%8A%B8%E8%83%BD%E4%BA%BA%E3%81%AF%E3%82%AB%E3%83%BC%E3%83%89%E3%81%8C%E5%91%BD%EF%BC%8110%20%E3%82%BD30', target='_blank')
               span Tw
           li.item.item-fb
-            a(href='#')
+            a(href='https://www.facebook.com/sharer/sharer.php?u=http://dncngrl.com/dg02', target='_blank')
               span Fb
           li.item.item-gp
-            a(href='#')
+            a(href='https://plus.google.com/share?url=dncngrl.com/dg02', target='_blank')
               span Gp
     
     
@@ -132,18 +132,14 @@ html(lang='ja', prefix="og: http://ogp.me/ns#")
             .description
               dl.info_list
                 dt.info_listTitle 仕様
-                dd.info_listText B5縦 フルカラーオフセット印刷 20P
+                dd.info_listText B5縦 フルカラーオフセット印刷 無線綴じ 20P
                 dt.info_listTitle 頒布価格
                 dd.info_listText 700円
                 dt.info_listTitle 頒布場所
                 dd.info_listText
                   | 2016.7.10 芸能人はカードが命！10
                   br
-                  a.is-animation(href='#', target='_blank') - ソ30「Dancing Girl.」
-                dd.info_listText
-                  | 2016.8.12 コミックマーケット90
-                  br
-                  a.is-animation(href='#', target='_blank') - 1日目 西g13a「Dancing Girl.」
+                  a.is-animation(href='http://ketto.com/mimiken/ken.cgi?wf=%2C%83_%83%93%83V%83%93%83O%83K%81%5B%83%8B%2C', target='_blank') - ソ30「Dancing Girl.」
                       
               .info_credit
                 h3.info_creditTitle Credit
