--- a/source/index.jade
+++ b/source/index.jade
@@ -94,9 +94,9 @@ html(lang='ja', prefix="og: http://ogp.me/ns#")
             h2.title
               span Introduction
             .description
-              p あの「Soleil」のメンバーにして、ファッションブランド「SPICY AGEHA」の専属モデル、「美しき刃」こと紫吹蘭。そして「Dancing Diva」の一員、「ステージに咲く氷の華」氷上スミレ。そんなクールにして可憐な2人が、もし女性ファッション誌の巻頭特集を飾ったら……。
-              p 「Dancing Girl. Vol.01 Orchid &amp; Violet」は、そんなコンセプトで制作した、「アイカツ！」の二次創作イラスト集です。
-              p まるで、ゲーム・アニメから現実世界へ飛び出してきたようなアイドル2人の活躍をぜひ、ご覧ください。
+              p SFのようなサイバーな世界、ファンタジーのように幻想的な世界。そんな世界観に「アイカツ！」のキャラクターがいたら、彼女たちは一体どんな風に輝いてくれるだろう。
+              p 「Dancing Girl. Vol.02 Another World」は、“アイカツ！×マットペイント”がコンセプトな、「アイカツ！」の二次創作イラスト集です。
+              p 非現実的な世界にたたずむ彼女たちアイドルの輝きを、ぜひご覧ください。
             
       //- gallery
       section.viewArea_section.viewArea_section-gallery
