hide tumblr control

--- a/source/assets/stylesheets/_base.styl
+++ b/source/assets/stylesheets/_base.styl
@@ -79,6 +79,11 @@ a
         width 100%
 
 
+// Tumblr COntrolを非表示
+body .tmblr-iframe
+  display none !important
+
+
 // noise and light
 .noise,
 .light
