--- a/source/index.jade
+++ b/source/index.jade
@@ -2,13 +2,13 @@ doctype html
 html(lang='ja', prefix="og: http://ogp.me/ns#")
   head
     meta(charset='UTF-8')
-    title Dancing Girl. Vol.02 Another World | 芸能人はカードが命！10 ソ30
+    title Dancing Girl. Vol.02 Another World | コミックマーケット90 1日目 西g13a
 
     meta(name="description", content="「アイカツ！」の二次創作イラスト集「Dancing Girl. Vol.02 Another World」の特設サイト。")
     meta(name="robots", content="index,follow")
     meta(name="viewport", content="width=device-width,initial-scale=1.0")
 
-    meta(property="og:title", content="Dancing Girl. Vol.02 Another World | 芸能人はカードが命！10 ソ30")
+    meta(property="og:title", content="Dancing Girl. Vol.02 Another World | コミックマーケット90 1日目 西g13a")
     meta(property="og:type", content="website")
     meta(property="og:url", content="http://dncngrl.com/dg02")
     meta(property="og:description", content="「アイカツ！」の二次創作イラスト集「Dancing Girl. Vol.02 Another World」の特設サイト。")
@@ -86,6 +86,7 @@ html(lang='ja', prefix="og: http://ogp.me/ns#")
             h1.title
               span Another World
             small.caption 2016 Summer -Aikatsu! Illustrations-
+            small.date コミックマーケット90 1日目 西g13a
       
       //- introduction
       section.viewArea_section.viewArea_section-intro
@@ -140,6 +141,10 @@ html(lang='ja', prefix="og: http://ogp.me/ns#")
                   | 2016.7.10 芸能人はカードが命！10
                   br
                   a.is-animation(href='http://ketto.com/mimiken/ken.cgi?wf=%2C%83_%83%93%83V%83%93%83O%83K%81%5B%83%8B%2C', target='_blank') - ソ30「Dancing Girl.」
+                dd.info_listText
+                  | 2016.8.12 コミックマーケット90
+                  br
+                  a.is-animation(href='https://webcatalog-free.circle.ms/Circle/12726600', target='_blank') - 1日目 西g13a「Dancing Girl.」
                       
               .info_credit
                 h3.info_creditTitle Credit
@@ -161,7 +166,7 @@ html(lang='ja', prefix="og: http://ogp.me/ns#")
         .copyright (C) 2016 Dancing Girl.
         .border
         .credit
-          | Design and Illustration by
+          | Design, Illustration and Develop by
           a.is-animation(href='http://brdr.jp', target='_blank') Ryo Nakae
         
       .footer_scroll#scroll
